--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,13 @@
 			height:90px;
 			width: 90px;
 			border-style: solid;
-			border-color: black;
+			border-color: gray;
 			margin: 2px;
 	}
-/*
-h1 {
-	background-color: yellow;
-	color: red;
-	}*/
+
+h1 {padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: gray;
+	color: white;
+	}
+body {font-size: 20px;}
