--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,16 @@
 			border-style: solid;
 			border-color: gray;
 			margin: 1px;
-	}
+}
 
-h1 {padding-top: 10px;
+h1 {
 	padding-bottom: 10px;
 	color: white;
-	}
+}
 
 body {font-size: 20px;}
 
+.icon {
+	height:60px;
+	width:60px;
+}
