--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 			height:90px;
 			width: 90px;
 			border-style: solid;
-			border-color: gray;
+			border-color: lightgray;
 			margin: 1px;
 			z-index: 100;
 }
@@ -27,4 +27,17 @@ body {font-size: 20px;}
 }
 
 body {background-image: url("../images/greybg.jpg");
+}
+
+
+.footer { 
+  margin-top: 50px;
+  z-index: 10;
+  height: 50px;
+  text-align: center;
+  background-color: #fdbf04a1;
+  color: gray;
+  font-size: 10px;
+  padding-top: 15px;
+
 }
