--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 			width: 90px;
 			border-style: solid;
 			border-color: lightgray;
+			border-width: 1px;
 			margin: 1px;
 			z-index: 100;
 }
@@ -12,8 +13,6 @@ h1 {
 	padding-bottom: 10px;
 	color: white;
 }
-
-body {font-size: 20px;}
 
 .icon {
 	height:60px;
@@ -26,18 +25,35 @@ body {font-size: 20px;}
 #para {font-size: 18px;
 }
 
-body {background-image: url("../images/greybg.jpg");
+body {
+	background-image: url("../images/greybg.jpg");
+	margin-bottom: 64px;
+	font-size: 20px;
 }
 
 
-.footer { 
-  margin-top: 50px;
-  z-index: 10;
-  height: 50px;
-  text-align: center;
-  background-color: #fdbf04a1;
-  color: gray;
-  font-size: 10px;
-  padding-top: 15px;
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 64px;
+    line-height: 60px;
+    background-color: #fdbf04a1;
+}
 
+.footercontainer {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+}
+
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+.footertext {
+    color: gray;
+    font-size: 10px;
 }
