--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 			border-width: 1px;
 			margin: 1px;
 			z-index: 100;
+			box-shadow: 6px 3px 20px 0px rgba(116,116,116,0.73);
 }
 
 h1 {
@@ -23,6 +24,7 @@ h1 {
 }
 
 #para {font-size: 18px;
+	margin-bottom: 15px;
 }
 
 body {
@@ -56,4 +58,8 @@ html {
 .footertext {
     color: gray;
     font-size: 10px;
+}
+
+.shadow {
+box-shadow: 6px 3px 20px 0px rgba(116,116,116,0.73);
 }
