--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 			border-style: solid;
 			border-color: lightgray;
 			border-width: 1px;
-			margin: 1px;
+			margin: 2px;
 			z-index: 100;
 			box-shadow: 6px 3px 20px 0px rgba(116,116,116,0.73);
 }
@@ -61,5 +61,10 @@ html {
 }
 
 .shadow {
-box-shadow: 6px 3px 20px 0px rgba(116,116,116,0.73);
+	box-shadow: 6px 3px 20px 0px rgba(116,116,116,0.73);
+}
+
+#name {
+/*text-shadow: 0px 3px 6px rgba(228,238,92,0.82);*/
+	font-style: italic;
 }
